// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser char processes a $type 1`] = `
Object {
  "value": 18,
}
`;

exports[`parser char processes a $type 2`] = `
Object {
  "val": "18",
}
`;

exports[`parser int processes a $type 1`] = `
Object {
  "value": 305419896,
}
`;

exports[`parser int processes a $type 2`] = `
Object {
  "val": "305419896",
}
`;

exports[`parser intSigned processes a $type 1`] = `
Object {
  "value": 305419896,
}
`;

exports[`parser intSigned processes a $type 2`] = `
Object {
  "val": "305419896",
}
`;

exports[`parser methods can be chained to create an object 1`] = `
Object {
  "char": 18,
  "int": 305419896,
  "intSigned": 305419896,
  "sha": "12345678",
  "short": 4660,
}
`;

exports[`parser sha processes a $type 1`] = `
Object {
  "value": "12345678",
}
`;

exports[`parser short processes a $type 1`] = `
Object {
  "value": 4660,
}
`;

exports[`parser short processes a $type 2`] = `
Object {
  "val": "4660",
}
`;

exports[`parser variables can be nested 1`] = `
Object {
  "one": Object {
    "a": 18,
    "b": 18,
  },
  "two": Object {
    "a": 18,
    "b": 18,
  },
}
`;
